# home-sensors

./: CMakeLists.txt  README.md  e-home.fzz
components/Adafruit-sensors/: Adafruit_BMP280.cpp  Adafruit_BMP280.h  Adafruit_Sensor.cpp  Adafruit_Sensor.h  Adafruit_Si7021.cpp  Adafruit_Si7021.h  CMakeLists.txt
components/GxEPD/: CMakeLists.txt
components/GxEPD/GxIO/: GxIO.cpp  GxIO.h
components/ccs811/: CMakeLists.txt  ccs811.cpp  ccs811.h
components/ds18b20/: CMakeLists.txt  ds18b20.c  ds18b20.h
main/: BitmapGraphics.h  CMakeLists.txt  idf_component.yml  main.cc  mqtt.c  mqtt.h  wifi.c  wifi.h
